--- a/style/website.css
+++ b/style/website.css
@@ -2,7 +2,7 @@ body {
   background-color: #eee;
 }
 
-/* Remove the navbar's default margin-bottom and rounded borders */
+/*menu*/
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
@@ -29,12 +29,27 @@ body {
   color: black;
 }
 
-/* Add a gray background color and some padding to the footer */
-footer {
-  background-color: #f2f2f2;
-  padding: 25px;
+/*footer*/
+.page-footer.font-small.green {
+  background: #62c866;
 }
 
+.page-footer.font-small.green div {
+  font-family: sans-serif;
+  color: white;
+}
+
+.page-footer.font-small.green div ul li {
+  font-family: sans-serif;
+}
+
+.page-footer.font-small.green div ul li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+}
+
+/*index carousel*/
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
   margin: auto;
@@ -47,3 +62,56 @@ footer {
     display: none;
   }
 }
+
+/*login form*/
+.form-heading { color:#fff; font-size:23px;}
+.panel h2{ color:#444444; font-size:18px; margin:0 0 8px 0;}
+.panel p { color:#777777; font-size:14px; margin-bottom:30px; line-height:24px;}
+.login-form .form-control {
+  background: #f7f7f7 none repeat scroll 0 0;
+  border: 1px solid #d4d4d4;
+  border-radius: 4px;
+  font-size: 14px;
+  height: 50px;
+  line-height: 50px;
+}
+.main-div {
+  background: #ffffff none repeat scroll 0 0;
+  border-radius: 2px;
+  margin: 70px  auto;
+  max-width: 38%;
+  padding: 100px 80px;
+}
+
+.login-form .form-group {
+  margin-bottom:10px;
+}
+.login-form{ text-align:center;}
+.forgot a {
+  color: #777777;
+  font-size: 14px;
+  text-decoration: underline;
+}
+.login-form  .btn.btn-primary {
+  background: #f0ad4e none repeat scroll 0 0;
+  border-color: #f0ad4e;
+  color: #ffffff;
+  font-size: 14px;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  padding: 0;
+}
+.forgot {
+  text-align: left; margin-bottom:30px;
+}
+.botto-text {
+  color: #ffffff;
+  font-size: 14px;
+  margin: auto;
+}
+.login-form .btn.btn-primary.reset {
+  background: #ff9900 none repeat scroll 0 0;
+}
+.back { text-align: left; margin-top:10px;}
+.back a {color: #444444; font-size: 13px;text-decoration: none;}
