--- a/style/website.css
+++ b/style/website.css
@@ -57,7 +57,7 @@ body {
 }
 
 /* Hide the carousel text when the screen is less than 600 pixels wide */
-@media (max-width: 600px) {
+@media (max-width: 100%) {
   .carousel-caption {
     display: none;
   }
